<resources>
    <string name="app_name">Login</string>
    <string name="hint_password">Password</string>
    <string name="lbl_forget">Forgot Password? Click here!</string>
    <string name="btn_login">Login</string>
    <string name="hint_employee_id">User Name</string>
    <string name="user_login">User Login</string>
    <string name="full_name">Full Name</string>
    <string name="user_email">E-mail Id</string>
    <string name="registration">User Registration</string>
    <string name="lbl_register">Don\'t have an account? Register here!</string>
    <string name="lbl_login">Already Registered? Click here!</string>
    <string name="hint_re_password">Confirm Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="contact">Contact Number</string>
    <string name="alternative_contact">Alternative Number</string>
    <string name="model_no">Model No</string>
    <string name="serial_no">Serial No</string>
    <string name="contract_duration">Contract Duration</string>
    <string name="priority">Priority</string>
    <string name="plot_number">Plot Number</string>
    <string name="street">Street</string>
    <string name="landmark">Landmark</string>
    <string name="postcode">Postcode</string>
    <string name="btn_register">Register</string>
    <string name="btn_logout">Logout</string>
</resources>